# AutocalibrationResearch

./: CMakeLists.txt  README.md  autocal.sublime-project  autocal.sublime-workspace  b
common/: CalibrationTools.cpp  Correlator.cpp  GraphicsTools.h  MocapRecorder.cpp  MocapStream.cpp  MocapStream.h  PSMoveUtils.cpp  PSMoveUtils.h  SensorPlant.cpp  SensorPlant.h
module/fusion/SensorCorrelator/: README.md
module/fusion/SensorCorrelator/src/: SensorCorrelator.cpp  SensorCorrelator.h
module/graphics/OpenNIViewer/: README.md
module/graphics/OpenNIViewer/src/: OpenNIViewer.cpp  OpenNIViewer.h
module/input/NatNet/src/: NatNet.cpp  NatNet.h  Parse.h
module/input/OpenNI/src/: OpenNI.cpp  OpenNI.h
module/input/OpenNIManager/src/: OpenNIManager.cpp  OpenNIManager.h
module/psmove/LiveMatchMocap/src/: LiveMatchMocap.cpp  LiveMatchMocap.h
module/psmove/Play/src/: Play.cpp  Play.h
module/psmove/Record/src/: Record.cpp  Record.h
module/psmove/View/src/: View.cpp  View.h
module/support/MocapNoiseAnalysis/src/: MocapNoiseAnalysis.cpp  MocapNoiseAnalysis.h
module/support/MocapRecorder/src/: MocapRecorder.cpp  MocapRecorder.h
module/support/NUcap/src/: NUcap.cpp  NUcap.h
module/support/NUcapSimulator/src/: NUcapSimulator.cpp  NUcapSimulator.h
module/support/SignalCatcher/src/: SignalCatcher.cpp  SignalCatcher.h
module/support/TestCalibrationTools/config/: TestCalibrationTools.yaml
module/support/TestCalibrationTools/src/: TestCalibrationTools.cpp  TestCalibrationTools.h
module/support/extension/FileWatcher/: CMakeLists.txt
module/support/logging/ConsoleLogHandler/: README.md
module/vision/BallDetector/src/: BallDetector.cpp  BallDetector.h
module/vision/GoalDetector/src/: GoalDetector.cpp  GoalDetector.h  RansacGoalModel.cpp  RansacGoalModel.h
module/vision/LUTClassifier/src/: BallEnhancer.cpp  BallFinder.cpp  GoalEnhancer.cpp  GoalFinder.cpp  HorizonFinder.cpp  LUTClassifier.cpp  LUTClassifier.h  QuexClassifier.cpp  QuexClassifier.h  VisualHorizonFinder.cpp
module/vision/ObstacleDetector/src/: ObstacleDetector.cpp  ObstacleDetector.h
module/vision/SLAME/src/: InverseDepthPointModel.cpp  InverseDepthPointModel.h  SLAME.cpp  SLAME.h  SLAMEModule.h
modules/input/NatNet/src/: NatNet.cpp  NatNet.h  Parse.h
modules/input/OpenNI/: README.md
modules/input/OpenNI/src/: OpenNI.cpp  OpenNI.h
modules/input/OpenNI/tests/: OpenNITest.cpp
modules/psmove/LiveMatchMocap/: README.md
modules/psmove/LiveMatchMocap/src/: LiveMatchMocap.cpp  LiveMatchMocap.h
modules/psmove/Play/: README.md
modules/psmove/Play/config/: Play.yaml
modules/psmove/Play/src/: Play.cpp  Play.h
modules/psmove/Record/config/: Record.yaml
modules/psmove/Record/src/: Record.cpp  Record.h
modules/psmove/View/: README.md
modules/psmove/View/src/: View.cpp  View.h
modules/support/MocapNoiseAnalysis/: README.md
modules/support/MocapNoiseAnalysis/src/: MocapNoiseAnalysis.cpp  MocapNoiseAnalysis.h
modules/support/MocapRecorder/src/: MocapRecorder.cpp  MocapRecorder.h
modules/support/NUcap/src/: NUcap.cpp  NUcap.h
modules/support/NUcapSimulator/src/: NUcapSimulator.cpp  NUcapSimulator.h
modules/support/NUcapSimulator/tests/: NUcapSimulatorTest.cpp
modules/vision/SLAME/src/: SLAME.cpp  (+4 more)
nuclear/utility/: CMakeLists.txt
play/: main.cpp
record/: CMakeLists.txt  main.cpp
roles/: kinectview.role  livemocap.role  noiseanalysis.role  play.role  record.role  testcalibrationtools.role  view.role
roles/play/: main.cpp
shared/message/: Geometry.proto  Matrix.proto  Vector.proto
shared/message/fusion/: Fusion.h
shared/message/input/: MotionCapture.h  OpenNIImage.h
shared/message/support/: Configuration.h  FileWatch.h  SegmentationFault.h
shared/messages/: Geometry.proto  Matrix.proto  Vector.proto  hint.cpp
shared/messages/input/: MotionCapture.h
shared/messages/support/: Configuration.h  FileWatch.h  SegmentationFault.h
shared/utility/: CMakeLists.txt  GetNUtilities.cmake
shared/utility/autocal/: CalibrationTools.cpp  CalibrationTools.h  Correlator.cpp  Correlator.h  GraphicsTools.h  MocapRecording.cpp  MocapRecording.h  MocapStream.cpp  MocapStream.h  PSMoveUtils.cpp  PSMoveUtils.h  SensorPlant.cpp  SensorPlant.h
shared/utility/error/: CMakeLists.txt  openal_error_category.h
shared/utility/file/: fileutil.cpp  fileutil.h
shared/utility/image/: ColorModelConversions.cpp  ColorModelConversions.h  HSV.h  RGB.h  YCbCr.h
shared/utility/math/: angle.h  comparison.h  coordinates.h  vision.h
shared/utility/math/geometry/: Circle.cpp  Circle.h  Intersection.cpp  Intersection.h  Line.cpp  Line.h  ParametricLine.h  Plane.h  Polygon.cpp  Polygon.h  Quad.cpp  Quad.h  RotatedRectangle.cpp  RotatedRectangle.h  UnitQuaternion.cpp  UnitQuaternion.h
shared/utility/math/kalman/: AdaptiveIMUModel.cpp  ParticleFilter.h  UKF.h
shared/utility/math/matrix/: Rotation2D.cpp  Rotation2D.h  Rotation3D.cpp  Rotation3D.h  Transform2D.cpp  Transform2D.h  Transform3D.cpp  Transform3D.h  matrix.h
shared/utility/math/ransac/: NPartiteRansac.h  Ransac.h  RansacCircleModel.cpp  RansacCircleModel.h  RansacLineModel.cpp  RansacLineModel.h  RansacResult.h
shared/utility/motion/: CMakeLists.txt
shared/utility/nubugger/: NUhelpers.h
shared/utility/strutil/: ansi.h  banner.h  strutil.h
shared/utility/support/: CMakeLists.txt  proto_armadillo.cpp  proto_armadillo.h  yaml_armadillo.h  yaml_expression.h
shared/utility/support/evil/: pure_evil.cpp  pure_evil.h
shared/utility/time/: time.h
src/: CalibrationTools.cpp  Correlator.cpp  MocapRecording.cpp  SensorPlant.h  main.cpp
tools/cmake/: Compiler.cmake  FindFSWatch.cmake  FindNITE.cmake  FindOpenNI.cmake  FindOpenNI2.cmake  Findlibusb.cmake  Findpng++.cmake  SharedLibraries.cmake  ToolchainLibraryFinder.cmake  banner.txt
tools/images/darwin/: Dockerfile
tools/scripts/: generate_role.py
utility/math/geometry/: UnitQuaternion.cpp
utility/math/kalman/: InverseDepthPointModel.cpp  LinearVec3Model.cpp
utility/math/matrix/: Rotation3D.h  Transform3D.cpp
utility/math/ransac/: NPartiteRansac.h
view/: main.cpp
(+43 files in other folders)
